@@ -1,11 +1,3 @@
-do
-  -- don't load if sim scenario has already loaded this (in another lua state)
-  local modloader = remote.interfaces["modloader"]
-  if modloader and modloader[script.mod_name] then
-    return
-  end
-end
-
 ---@class NixieGlobal
 ---@field alphas {[integer]:LuaEntity?}
 ---@field next_alpha? integer
