@@ -5,7 +5,7 @@
   "title": "Nixie Tubes",
   "author": "GopherAtl, justarandomgeek",
   "description": "Adds nixie tubes, for displaying values from a connected circuit network.",
-  "dependencies": ["base", "simhelper", "?signalstrings", "?PickerExtended"],
+  "dependencies": ["base >= 1.1.107", "?signalstrings", "?PickerExtended"],
   "package":{
     "ignore":[ "*.pdn", "*.xcf" ]
   }
