@@ -1,3 +1,0 @@
-local handler = require("event_handler")
-local modloader = require("__simhelper__/modloader.lua")
-handler.add_lib(modloader.load("nixie-tubes"))
