@@ -1,4 +1,0 @@
-{
-  "multiplayer-compatible": false,
-  "order": "zzz"
-}
